--- a/package.json
+++ b/package.json
@@ -22,23 +22,26 @@
         ]
     },
     "dependencies": {
-        "@ant-design/pro-layout": "^6.5.0",
-        "@umijs/preset-react": "1.x",
-        "umi": "^3.4.6"
+        "umi": "^3.4.6",
+        "react": "17.x",
+        "react-dom": "17.x",
+        "classnames": "^2.2.6",
+        "antd-mobile": "^2.3.4",
+        "dva": "^2.4.1"
     },
     "devDependencies": {
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "@types/classnames": "^2.2.9",
         "@typescript-eslint/eslint-plugin": "^4.20.0",
         "@typescript-eslint/parser": "^4.20.0",
         "@umijs/test": "^3.4.6",
         "babel-eslint": "^10.1.0",
+        "babel-plugin-import": "^1.13.3",
         "eslint": "^7.23.0",
         "eslint-plugin-react": "^7.23.1",
         "lint-staged": "^10.0.7",
         "prettier": "^2.2.0",
-        "react": "17.x",
-        "react-dom": "17.x",
         "typescript": "^4.1.2",
         "yorkie": "^2.0.0"
     }
