--- a/package.json
+++ b/package.json
@@ -14,25 +14,29 @@
     },
     "lint-staged": {
         "*.{js,jsx,less,md,json}": [
-            "prettier --write"
+            "prettier"
         ],
         "*.ts?(x)": [
-            "prettier --parser=typescript --write",
+            "prettier --parser=typescript",
             "eslint src/**/*.tsx"
         ]
     },
     "dependencies": {
-        "umi": "^3.4.6",
+        "antd-mobile": "^2.3.4",
+        "classnames": "^2.2.6",
+        "dva": "^2.4.1",
+        "good-storage": "^1.1.1",
+        "prop-types": "^15.7.2",
         "react": "17.x",
         "react-dom": "17.x",
-        "classnames": "^2.2.6",
-        "antd-mobile": "^2.3.4",
-        "dva": "^2.4.1"
+        "umi": "^3.4.6"
     },
     "devDependencies": {
+        "@types/classnames": "^2.2.9",
+        "@types/good-storage": "^1.1.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
-        "@types/classnames": "^2.2.9",
+        "@types/react-infinite-scroller": "^1.2.1",
         "@typescript-eslint/eslint-plugin": "^4.20.0",
         "@typescript-eslint/parser": "^4.20.0",
         "@umijs/test": "^3.4.6",
@@ -42,6 +46,7 @@
         "eslint-plugin-react": "^7.23.1",
         "lint-staged": "^10.0.7",
         "prettier": "^2.2.0",
+        "react-infinite-scroller": "^1.2.4",
         "typescript": "^4.1.2",
         "yorkie": "^2.0.0"
     }
