--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     },
     "lint-staged": {
         "*.{js,jsx,less,md,json}": [
-            "prettier"
+            "prettier",
+            "git add"
         ],
         "*.ts?(x)": [
             "prettier --parser=typescript",
-            "eslint src/**/*.tsx"
+            "eslint src/**/*.tsx",
+            "git add"
         ]
     },
     "dependencies": {
