--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "dependencies": {
         "@umijs/plugin-dva": "^0.11.0",
         "antd-mobile": "^2.3.4",
+        "babel-jest": "^26.6.3",
         "classnames": "^2.2.6",
         "dva": "^2.4.1",
         "good-storage": "^1.1.1",
+        "jest": "^26.6.3",
         "lyric-parser": "^1.0.1",
         "prop-types": "^15.7.2",
         "react": "17.x",
@@ -36,12 +38,16 @@
         "umi": "^3.4.6"
     },
     "devDependencies": {
+        "@babel/core": "^7.14.0",
+        "@babel/preset-env": "^7.14.1",
         "@types/classnames": "^2.2.9",
         "@types/good-storage": "^1.1.0",
+        "@types/jest": "^26.0.23",
         "@types/lyric-parser": "^1.0.2",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "@types/react-infinite-scroller": "^1.2.1",
+        "@types/react-test-renderer": "^17.0.1",
         "@typescript-eslint/eslint-plugin": "^4.20.0",
         "@typescript-eslint/parser": "^4.20.0",
         "@umijs/test": "^3.4.6",
@@ -52,6 +58,7 @@
         "lint-staged": "^10.0.7",
         "prettier": "^2.2.0",
         "react-infinite-scroller": "^1.2.4",
+        "react-test-renderer": "^17.0.2",
         "typescript": "^4.1.2",
         "yorkie": "^2.0.0"
     }
