--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "lint": "eslint src/**/*.tsx",
         "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
         "test": "umi-test",
+        "cypress": "cypress open",
         "test:coverage": "umi-test --coverage"
     },
     "gitHooks": {
@@ -53,6 +54,7 @@
         "@umijs/test": "^3.4.6",
         "babel-eslint": "^10.1.0",
         "babel-plugin-import": "^1.13.3",
+        "cypress": "^7.2.0",
         "eslint": "^7.23.0",
         "eslint-plugin-react": "^7.23.1",
         "lint-staged": "^10.0.7",
