--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         ]
     },
     "dependencies": {
+        "@sentry/react": "^6.3.5",
+        "@sentry/tracing": "^6.3.5",
         "@umijs/plugin-dva": "^0.11.0",
         "antd-mobile": "^2.3.4",
         "classnames": "^2.2.6",
