fix: lint-stage警告

--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
         ],
         "*.ts?(x)": [
             "prettier --parser=typescript",
-            "eslint src/**/*.tsx",
-            "git add"
+            "eslint src/**/*.tsx"
         ]
     },
     "dependencies": {
