--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "dependencies": {
         "@sentry/react": "^6.7.0",
-        "@sentry/tracing": "^6.5.1",
+        "@sentry/tracing": "^6.7.0",
         "@umijs/plugin-dva": "^0.11.0",
         "antd-mobile": "^2.3.4",
         "babel-jest": "^26.6.3",
@@ -42,6 +42,7 @@
     "devDependencies": {
         "@babel/core": "^7.14.0",
         "@babel/preset-env": "^7.14.1",
+        "@sentry/webpack-plugin": "^1.15.1",
         "@types/classnames": "^2.2.9",
         "@types/good-storage": "^1.1.0",
         "@types/jest": "^26.0.23",
